--- a/packages/main/package.json
+++ b/packages/main/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@timsmith/main",
+  "name": "@project-name/main",
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
@@ -11,7 +11,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@timsmith/second": "workspace:*",
+    "@project-name/second": "workspace:*",
     "just-snake-case": "3.1.1"
   }
 }
